updated all images

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,14 @@ eleventyNavigation:
 
 <section id="hero">
   <video autoplay muted loop playsinline class="cs-picture">
-    <source src="/images/hero_vid.mp4" type="video/mp4" autoplay muted loop playsinline />
+    <source
+      src="/images/hero_vid.mp4"
+      type="video/mp4"
+      autoplay
+      muted
+      loop
+      playsinline
+    />
     Your browser does not support the video tag.
   </video>
   <div class="cs-overlay"></div>
@@ -28,14 +35,25 @@ eleventyNavigation:
         Power Your Home or Business with Expert Electrical Services
       </h1>
       <p class="cs-text">
-        At More Power Electric, we provide top-quality electrical repairs, installations, and lighting solutions for
-        residential, commercial, and industrial clients across Michigan. From floodlight repairs to LED conversions and
-        standby power systems, our licensed electricians ensure every project is safe, efficient, and built to last.
+        At More Power Electric, we provide top-quality electrical repairs,
+        installations, and lighting solutions for residential, commercial, and
+        industrial clients across Michigan. From floodlight repairs to LED
+        conversions and standby power systems, our licensed electricians ensure
+        every project is safe, efficient, and built to last.
       </p>
-      <a href="/electrical-installations/" class="cs-button-solid">Explore Services</a>
+      <a href="/electrical-installations/" class="cs-button-solid"
+        >Explore Services</a
+      >
       <a href="/about/" class="cs-button-transparent">
-        <img class="cs-img" loading="lazy" decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" />
+        <img
+          class="cs-img"
+          loading="lazy"
+          decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
+          alt="play icon"
+          width="17"
+          height="17"
+        />
         Learn More
       </a>
     </div>
@@ -49,35 +67,54 @@ eleventyNavigation:
 <section id="services" class="services">
   <div class="card">
     <picture>
-      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_1.svg" alt="electrical repair icon" width="48"
-        height="48" />
+      <img
+        aria-hidden="true"
+        decoding="async"
+        src="/assets/svgs/service_1.svg"
+        alt="electrical repair icon"
+        width="48"
+        height="48"
+      />
     </picture>
     <h2>Electrical Repair</h2>
     <p>
-      Fast, dependable repair services to keep your electrical systems running safely — from outlets and wiring to
-      lighting and panel issues.
+      Fast, dependable repair services to keep your electrical systems running
+      safely — from outlets and wiring to lighting and panel issues.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_2.svg" alt="lighting installation icon"
-        width="48" height="48" />
+      <img
+        aria-hidden="true"
+        decoding="async"
+        src="/assets/svgs/service_2.svg"
+        alt="lighting installation icon"
+        width="48"
+        height="48"
+      />
     </picture>
     <h2>Lighting & LED Conversions</h2>
     <p>
-      Upgrade your property with energy-efficient LED lighting and expertly installed floodlights or parking lot lights
-      for better visibility and savings.
+      Upgrade your property with energy-efficient LED lighting and expertly
+      installed floodlights or parking lot lights for better visibility and
+      savings.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_3.svg" alt="standby power systems icon"
-        width="48" height="48" />
+      <img
+        aria-hidden="true"
+        decoding="async"
+        src="/assets/svgs/service_3.svg"
+        alt="standby power systems icon"
+        width="48"
+        height="48"
+      />
     </picture>
     <h2>Standby Power Systems</h2>
     <p>
-      Ensure uninterrupted power with professional installation and maintenance of reliable standby generators for homes
-      and businesses.
+      Ensure uninterrupted power with professional installation and maintenance
+      of reliable standby generators for homes and businesses.
     </p>
   </div>
 </section>
@@ -89,33 +126,43 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'electrical work', 'cs-picture cs-picture1', 'lazy'%}
-      {% image './src/images/about_img_1.png', 'electrical work', 'cs-picture cs-picture2', 'lazy'%}
+      {% image './src/images/about_img_0.png', 'electrical work', 'cs-picture
+      cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
       <h2 class="cs-title">About More Power Electric</h2>
       <p class="cs-text">
-        More Power Electric is committed to delivering safe, efficient, and dependable electrical solutions for
-        Michigan’s homeowners and businesses. From small repairs to large-scale installations, our team combines
-        technical expertise with a dedication to customer satisfaction.
+        More Power Electric is committed to delivering safe, efficient, and
+        dependable electrical solutions for Michigan’s homeowners and
+        businesses. From small repairs to large-scale installations, our team
+        combines technical expertise with a dedication to customer satisfaction.
       </p>
       <p class="cs-text">
-        We specialize in residential, commercial, and industrial electrical work — including lighting upgrades, parking
-        lot light repairs, LED conversions, and standby power systems. Every project is handled by skilled professionals
-        who prioritize quality, safety, and lasting performance.
+        We specialize in residential, commercial, and industrial electrical work
+        — including lighting upgrades, parking lot light repairs, LED
+        conversions, and standby power systems. Every project is handled by
+        skilled professionals who prioritize quality, safety, and lasting
+        performance.
       </p>
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          My name is Kurt Mauer, owner of More Power Electric. With years of hands-on electrical experience and a
-          passion for delivering exceptional service, I ensure every client gets the right solution, done right the
-          first time.
+          My name is Kurt Mauer, owner of More Power Electric. With years of
+          hands-on electrical experience and a passion for delivering
+          exceptional service, I ensure every client gets the right solution,
+          done right the first time.
         </p>
         <span class="cs-name">Kurt Mauer</span>
         <span class="cs-job">Owner</span>
-        <img class="cs-quote-icon" loading="lazy" decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
-          height="77" />
+        <img
+          class="cs-quote-icon"
+          loading="lazy"
+          decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
+          alt="quote icon"
+          width="136"
+          height="77"
+        />
       </div>
       <a href="/about" class="button-solid">More About Us</a>
     </div>
@@ -129,28 +176,31 @@ eleventyNavigation:
 <section id="sbs-r">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/featured_img_0.png', 'electrical installation', 'cs-picture cs-picture1', 'lazy'%}
-      {% image './src/images/featured_img_1.png', 'lighting installation', 'cs-picture cs-picture2', 'lazy'%}
+      {% image './src/images/featured_img_0.png', 'electrical installation',
+      'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">Electrical Expertise</span>
       <h2 class="cs-title">More Power Electric</h2>
       <p class="cs-text">
-        We offer complete electrical services across Michigan, including system repairs, lighting upgrades, LED
-        conversions, generator installations, and more. Our mission is to deliver safe, reliable, and cost-effective
+        We offer complete electrical services across Michigan, including system
+        repairs, lighting upgrades, LED conversions, generator installations,
+        and more. Our mission is to deliver safe, reliable, and cost-effective
         solutions for every client.
       </p>
       <p class="cs-text">
-        From quick repairs to complex installations, we bring the skills and experience to get the job done efficiently.
-        We work with homeowners, contractors, facility managers, and business owners to provide tailored solutions that
-        meet their exact needs.
+        From quick repairs to complex installations, we bring the skills and
+        experience to get the job done efficiently. We work with homeowners,
+        contractors, facility managers, and business owners to provide tailored
+        solutions that meet their exact needs.
         <br /><br />
-        Our work ensures compliance with safety codes, improves energy efficiency, and enhances your property’s
-        functionality. Whether it’s upgrading a commercial lighting system or installing a residential standby
-        generator, we make sure your power is always ready.
+        Our work ensures compliance with safety codes, improves energy
+        efficiency, and enhances your property’s functionality. Whether it’s
+        upgrading a commercial lighting system or installing a residential
+        standby generator, we make sure your power is always ready.
         <br /><br />
-        Trust More Power Electric for professional electrical services that combine expertise, quality, and customer
-        care.
+        Trust More Power Electric for professional electrical services that
+        combine expertise, quality, and customer care.
       </p>
       <a href="/electrical-installations/" class="button-solid">
         Learn More About Our Services →
@@ -168,34 +218,53 @@ eleventyNavigation:
     <span class="cs-topper">Our Reviews</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      We’re proud to provide electrical services that keep homes and businesses powered, safe, and efficient. From
-      emergency repairs to full system upgrades, our customers appreciate our reliability, expertise, and attention to
-      detail. Here’s what they have to say.
+      We’re proud to provide electrical services that keep homes and businesses
+      powered, safe, and efficient. From emergency repairs to full system
+      upgrades, our customers appreciate our reliability, expertise, and
+      attention to detail. Here’s what they have to say.
     </p>
     <ul class="cs-card-group">
       <li class="cs-item">
         <p class="cs-item-p">
-          More Power Electric was outstanding! They fixed our parking lot lights quickly and even suggested an LED
-          upgrade that saved us money. Professional, courteous, and efficient from start to finish.
+          More Power Electric was outstanding! They fixed our parking lot lights
+          quickly and even suggested an LED upgrade that saved us money.
+          Professional, courteous, and efficient from start to finish.
         </p>
         <span class="cs-reviewer">
           Sarah L.
           <span class="cs-desc">Client</span>
         </span>
-        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" />
+        <img
+          class="cs-item-stars"
+          aria-hidden="true"
+          loading="lazy"
+          decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
+          alt="stars"
+          width="96"
+          height="16"
+        />
       </li>
       <li class="cs-item">
         <p class="cs-item-p">
-          We had a generator installed by More Power Electric and the process was smooth and stress-free. The team was
-          knowledgeable, friendly, and ensured everything was working perfectly.
+          We had a generator installed by More Power Electric and the process
+          was smooth and stress-free. The team was knowledgeable, friendly, and
+          ensured everything was working perfectly.
         </p>
         <span class="cs-reviewer">
           James P.
           <span class="cs-desc">Client</span>
         </span>
-        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" />
+        <img
+          class="cs-item-stars"
+          aria-hidden="true"
+          loading="lazy"
+          decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
+          alt="stars"
+          width="96"
+          height="16"
+        />
       </li>
     </ul>
   </div>
@@ -212,12 +281,13 @@ eleventyNavigation:
       With Us Today
     </h2>
     <p>
-      Let’s make your next electrical project a success. Contact More Power Electric for expert service you can trust.
+      Let’s make your next electrical project a success. Contact More Power
+      Electric for expert service you can trust.
     </p>
     <a href="/contact/" class="button-solid">Contact Us</a>
   </div>
-  {% image './src/images/final_home_img.png', 'electrician at work', '', 'lazy', '(max-width: 400px) 400px, (max-width:
-  850px) 850px, 1920px'%}
+  {% image './src/images/final_home_img.png', 'electrician at work', '', 'lazy',
+  '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
