--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -18,7 +18,8 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'More Power Electric office', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/landing.png', 'More Power Electric office', '', 'lazy',
+  '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -29,34 +30,44 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'More Power Electric team', 'cs-picture cs-picture1', 'lazy'%}
-      {% image './src/images/about_img_1.png', 'electrical work in progress', 'cs-picture cs-picture2', 'lazy'%}
+      {% image './src/images/about_img_0.png', 'electrical work in progress',
+      'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
       <h2 class="cs-title">About More Power Electric</h2>
       <p class="cs-text">
-        More Power Electric is a trusted, family-owned company dedicated to delivering safe, efficient, and dependable
-        electrical services. We handle residential wiring, commercial installations, system upgrades, and electrical
-        troubleshooting across the Midwest.
+        More Power Electric is a trusted, family-owned company dedicated to
+        delivering safe, efficient, and dependable electrical services. We
+        handle residential wiring, commercial installations, system upgrades,
+        and electrical troubleshooting across the Midwest.
       </p>
       <p class="cs-text">
-        We take the complexity out of electrical projects, ensuring every job meets code, operates flawlessly, and is
-        built to last. By working directly with each client, we provide timely service, quality workmanship, and
-        customized solutions for every need.
+        We take the complexity out of electrical projects, ensuring every job
+        meets code, operates flawlessly, and is built to last. By working
+        directly with each client, we provide timely service, quality
+        workmanship, and customized solutions for every need.
       </p>
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Kurt Mauer, founder of More Power Electric. My mission from day one has been to provide fair pricing,
-          dependable work, and the peace of mind that comes from knowing your electrical systems are in expert hands.
+          I’m Kurt Mauer, founder of More Power Electric. My mission from day
+          one has been to provide fair pricing, dependable work, and the peace
+          of mind that comes from knowing your electrical systems are in expert
+          hands.
         </p>
         <span class="cs-name">Kurt Mauer</span>
         <span class="cs-job">Founder & CEO</span>
-        <img class="cs-quote-icon" loading="lazy" decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
-          height="77" />
+        <img
+          class="cs-quote-icon"
+          loading="lazy"
+          decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
+          alt="quote icon"
+          width="136"
+          height="77"
+        />
       </div>
     </div>
   </div>
@@ -81,8 +92,9 @@ eleventyNavigation:
             </span>
           </button>
           <p class="cs-item-p">
-            We provide complete electrical solutions including wiring, panel upgrades, lighting installation, system
-            repairs, and safety inspections for homes and businesses.
+            We provide complete electrical solutions including wiring, panel
+            upgrades, lighting installation, system repairs, and safety
+            inspections for homes and businesses.
           </p>
         </li>
         <li class="cs-faq-item">
@@ -92,8 +104,9 @@ eleventyNavigation:
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We manage electrical work for offices, retail spaces, warehouses, and other facilities, ensuring
-            compliance with all local and national electrical codes.
+            Yes. We manage electrical work for offices, retail spaces,
+            warehouses, and other facilities, ensuring compliance with all local
+            and national electrical codes.
           </p>
         </li>
         <li class="cs-faq-item">
@@ -103,8 +116,9 @@ eleventyNavigation:
             </span>
           </button>
           <p class="cs-item-p">
-            Absolutely. We design and install wiring systems for new builds, working closely with contractors to ensure
-            efficient layouts and long-lasting performance.
+            Absolutely. We design and install wiring systems for new builds,
+            working closely with contractors to ensure efficient layouts and
+            long-lasting performance.
           </p>
         </li>
         <li class="cs-faq-item">
@@ -114,8 +128,9 @@ eleventyNavigation:
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We partner with property owners of all sizes, delivering affordable, high-quality electrical services
-            tailored to their specific needs.
+            Yes. We partner with property owners of all sizes, delivering
+            affordable, high-quality electrical services tailored to their
+            specific needs.
           </p>
         </li>
         <li class="cs-faq-item">
@@ -125,8 +140,9 @@ eleventyNavigation:
             </span>
           </button>
           <p class="cs-item-p">
-            We’re committed to safety, transparency, and expert workmanship. Every project is handled by our skilled
-            in-house electricians for consistent quality and lasting results.
+            We’re committed to safety, transparency, and expert workmanship.
+            Every project is handled by our skilled in-house electricians for
+            consistent quality and lasting results.
           </p>
         </li>
       </ul>
@@ -155,11 +171,11 @@ eleventyNavigation:
       With Us Today
     </h2>
     <p>
-      Quality electrical work means a safer, more efficient property. Contact More Power Electric today and let’s get
-      your project started right.
+      Quality electrical work means a safer, more efficient property. Contact
+      More Power Electric today and let’s get your project started right.
     </p>
     <a href="/contact/" class="button-solid">Free Consultation</a>
   </div>
-  {% image './src/images/final_home_img.png', 'More Power Electric workspace', '', 'lazy', '(max-width: 400px) 400px,
-  (max-width: 850px) 850px, 1920'%}
+  {% image './src/images/final_home_img.png', 'More Power Electric workspace',
+  '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
