--- a/src/pages/servicepages/electrical-installations.html
+++ b/src/pages/servicepages/electrical-installations.html
@@ -20,11 +20,11 @@ eleventyNavigation:
 <section id="int-hero">
   <h1 id="home-h">Residential & Commercial Electrical Installations</h1>
   <picture class="cs-background">
-    <source media="(max-width: 600px)" srcset="/images/bookkeeping_banner.png" />
-    <source media="(min-width: 601px)" srcset="/images/bookkeeping_banner.png" />
+    <source media="(max-width: 600px)" srcset="/images/electrical_banner.png" />
+    <source media="(min-width: 601px)" srcset="/images/electrical_banner.png" />
     <img
       decoding="async"
-      src="/images/bookkeeping_banner.png"
+      src="/images/electrical_banner.png"
       alt="electrical installation banner"
       width="1280"
       height="568"
@@ -42,12 +42,12 @@ eleventyNavigation:
     <div class="cs-image-group">
       <div class="cs-flex">
         <picture class="cs-background">
-          <source media="(max-width: 600px)" srcset="/images/bookkeeping_0.png" />
-          <source media="(min-width: 601px)" srcset="/images/bookkeeping_0.png" />
+          <source media="(max-width: 600px)" srcset="/images/electrical_0.png" />
+          <source media="(min-width: 601px)" srcset="/images/electrical_0.png" />
           <img
             loading="lazy"
             decoding="async"
-            src="/images/bookkeeping_0.png"
+            src="/images/electrical_0.png"
             alt="professional electrical installation"
             width="542"
             height="728"
@@ -159,12 +159,12 @@ eleventyNavigation:
 <section id="services-563">
   <div class="cs-container">
     <picture class="cs-picture">
-      <source media="(max-width: 600px)" srcset="/images/bookkeeping_1.png" />
-      <source media="(min-width: 601px)" srcset="/images/bookkeeping_1.png" />
+      <source media="(max-width: 600px)" srcset="/images/electrical_1.png" />
+      <source media="(min-width: 601px)" srcset="/images/electrical_1.png" />
       <img
         loading="lazy"
         decoding="async"
-        src="/images/bookkeeping_1.png"
+        src="/images/electrical_1.png"
         alt="electrical services"
         width="630"
         height="528"
