--- a/src/pages/servicepages/generator-installation-maintenance.html
+++ b/src/pages/servicepages/generator-installation-maintenance.html
@@ -20,9 +20,9 @@ eleventyNavigation:
 <section id="int-hero">
     <h1 id="home-h">Standby Generator Installation & Maintenance</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/bookkeeping_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/bookkeeping_banner.png" />
-        <img decoding="async" src="/images/bookkeeping_banner.png" alt="standby generator service banner" width="1280"
+        <source media="(max-width: 600px)" srcset="/images/generator_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/generator_banner.png" />
+        <img decoding="async" src="/images/generator_banner.png" alt="standby generator service banner" width="1280"
             height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,9 +36,9 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/bookkeeping_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/bookkeeping_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/bookkeeping_0.png"
+                    <source media="(max-width: 600px)" srcset="/images/generator_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/generator_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/generator_0.png"
                         alt="standby generator installation service" width="542" height="728" />
                 </picture>
                 <div class="cs-box">
@@ -127,9 +127,9 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/bookkeeping_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/bookkeeping_1.png" />
-            <img loading="lazy" decoding="async" src="/images/bookkeeping_1.png" alt="standby generator services"
+            <source media="(max-width: 600px)" srcset="/images/generator_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/generator_1.png" />
+            <img loading="lazy" decoding="async" src="/images/generator_1.png" alt="standby generator services"
                 width="630" height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
