--- a/src/pages/servicepages/led-lighting-upgrades-outdoor-lighting-repair.html
+++ b/src/pages/servicepages/led-lighting-upgrades-outdoor-lighting-repair.html
@@ -20,9 +20,9 @@ eleventyNavigation:
 <section id="int-hero">
     <h1 id="home-h">LED Lighting Upgrades & Outdoor Lighting Repair</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/bookkeeping_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/bookkeeping_banner.png" />
-        <img decoding="async" src="/images/bookkeeping_banner.png" alt="LED lighting and outdoor lighting repair banner"
+        <source media="(max-width: 600px)" srcset="/images/led_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/led_banner.png" />
+        <img decoding="async" src="/images/led_banner.png" alt="LED lighting and outdoor lighting repair banner"
             width="1280" height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,9 +36,9 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/bookkeeping_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/bookkeeping_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/bookkeeping_0.png" alt="LED lighting installation"
+                    <source media="(max-width: 600px)" srcset="/images/led_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/led_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/led_0.png" alt="LED lighting installation"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
@@ -126,9 +126,9 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/bookkeeping_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/bookkeeping_1.png" />
-            <img loading="lazy" decoding="async" src="/images/bookkeeping_1.png" alt="LED lighting service" width="630"
+            <source media="(max-width: 600px)" srcset="/images/led_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/led_1.png" />
+            <img loading="lazy" decoding="async" src="/images/led_1.png" alt="LED lighting service" width="630"
                 height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
